--- a/simulation2.Rmd
+++ b/simulation2.Rmd
@@ -13,7 +13,7 @@ Design matrix is denoted by $X\in\mathbb{R}^{m\times (n-1)}$, $X_{ij}=1$ indicat
 The true effect difference is denoted by $\mu\in\mathbb{R}^{n-1}$, $\mu_j$ denotes the effect difference between treatment $j$ and reference treatment
 
 Data is simulated using the following formula:
-$$\theta_i\sim N(X\mu, \phi s_i^2 + \tau^2)$$
+$$\theta_i\sim N(Xd, \phi s_i^2 + \tau^2)$$
 $\phi\neq0$
 
 Fixed-effect model: $\phi=1,\tau=0$
@@ -25,7 +25,7 @@ Multiplicative effect: $\phi\neq 1, \tau=0$
 ```{r}
 # X: m*n-1 design matrix
 # se: m-dimensional vector, standard errors
-# mu: (n-1)-dimensional vector, true effect sizes
+# d: (n-1)-dimensional vector, true effect sizes
 # tau: scalar, additive parameter, can also handle m-dim vector values
 # phi: scalar, multiplicative parameter
 # ref: name of the reference treatment
@@ -34,8 +34,8 @@ Multiplicative effect: $\phi\neq 1, \tau=0$
 # assume a fixed-effect model by default (tau = 0, phi = 1)
 # output  treat1, treat2, studlab, seTE, TE
 
-generate_2arm <- function(X, mu, se, phi = 1, tau = 0, ref = "ref") {
-
+generate_2arm <- function(X, d, se, phi = 1, tau = 0, ref = "ref") {
+  
   m <- nrow(X)   # number of pairwise comparisons
   n <- ncol(X)   # number of treatments
   
@@ -55,7 +55,7 @@ generate_2arm <- function(X, mu, se, phi = 1, tau = 0, ref = "ref") {
   nmadata$seTE <- se
   
   # effect sizes
-  theta <- X %*% mu
+  theta <- X %*% d
   TE <- rnorm(m, mean = theta, sd = sqrt(phi * se^2 + tau^2))
   nmadata$TE <- TE
   
@@ -68,11 +68,12 @@ Example
 set.seed(123)
 X <- matrix(c(rep(c(1,0),3), rep(c(0,1),3)), nrow =6, byrow = TRUE)
 colnames(X) <- c("T1", "T2")
-mu <- c(5,10)
+d <- c(5,10)
 se <- rep(1,6)
-nmadata<-generate_2arm(X, mu, se)
-X
+nmadata<-generate_2arm(X, d, se)
 nmadata
+net <- netmeta(TE, seTE, treat1, treat2, studlab, data = nmadata)
+net$TE.common
 ```
 
 quick simulation to check if unbiased
@@ -80,7 +81,7 @@ quick simulation to check if unbiased
 X <- matrix(c(rep(c(1,0),10), rep(c(0,1),10)), nrow = 20, byrow = TRUE)
 colnames(X) <- c("T1", "T2")
 se <- rep(1,20)
-mu <- c(5,20)
+d <- c(5,20)
 
 nsim <- 100
 cols <- nsim
@@ -91,22 +92,22 @@ cover_random <- 0
 taus <- c()
   
 for (i in 1:nsim){
-  simdata <- generate_2arm(X, mu, se)
+  simdata <- generate_2arm(X, d, se)
   net <- netmeta(TE, seTE, treat1, treat2, studlab, data = simdata)
   
-  estTE[,i] <- net$TE.common[1,-1]  #TE at i-th simulation is stored in the i-th column
+  estTE[,i] <- net$TE.common[-1,1]  #TE at i-th simulation is stored in the i-th column
     
-  cover_common <- cover_common + min(mu <= net$upper.common[1,-1])* 
-                                    min(mu >= net$lower.common[1,-1])
-  cover_random <- cover_random + min(mu <= net$upper.random[1,-1])* 
-                                    min(mu >= net$lower.random[1,-1])
+  cover_common <- cover_common + min(d <= net$upper.common[-1,1])* 
+                                    min(d >= net$lower.common[-1,1])
+  cover_random <- cover_random + min(d <= net$upper.random[-1,1])* 
+                                    min(d >= net$lower.random[-1,1])
     
   taus <- c(taus, net$tau)
 }
   
 variance <- apply(estTE, 1, var) #take variance of each row
-bias <- rowMeans(estTE-mu)/mu
-MSE <- rowMeans((estTE-mu)^2)
+bias <- rowMeans(estTE-d)/d
+MSE <- rowMeans((estTE-d)^2)
   
 cat("Mean:", rowMeans(estTE), "\n")
 cat("Variance:", variance, "\n")
@@ -135,7 +136,7 @@ X
 standard error of each study is assumed to be 1, true treatment effects are assumed to be $\mu_{AB}=-2$, $\mu_{AC}=2$
 ```{r}
 se <- rep(1,10)
-mu <- c(-2,2)
+d <- c(-2,2)
 ```
 
 Consider three different models
@@ -166,7 +167,7 @@ data2
 weighted regression to estimate $\phi$
 $$\theta = X\mu+\phi\cdot se^2$$
 ```{r}
-fitme <- lm(data2$TE ~ X-1, weights = se^2)
+fitme <- lm(data2$TE ~ X-1, weights = 1/(se^2))
 summary(fitme)
 ```
 ```{r}
